Textual content update

--- a/apparat.html
+++ b/apparat.html
@@ -43,7 +43,7 @@ id="navbarScrollingDropdown" role="button" data-toggle="dropdown"
 aria-expanded="false">Manuscrits</a>
   	 								<ul class="dropdown-menu"
 aria-labelledby="navbarScrollingDropdown">
-  	 									<li><a class="dropdown-item" href="g340.html">Ms
+  	 									<li><a class="dropdown-item" href="g340.html?id=0">Ms
 g340</a></li>
   	 									<li><a class="dropdown-item" href="#">Ms
 g267</a></li>
@@ -70,17 +70,53 @@ g267</a></li>
 		<!-- Texte -->
 		<div class="row">
 			<div class="col-12">
-				<h3 class="pb-3 pt-5">Présentation du dossier génétique</h3>
+				<h3 class="pb-3 pt-5">Récit de genèse</h3>
 			</div>
+		</div>
+		<div class="row">
+			<h4>Phase pré-rédactionnelle : correspondance et documentation</h4>
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
-				<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
-				<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
+				<p class="text-justify">L’engouement de Flaubert pour la féerie se retrouve dans sa correspondance dès 1853<a id="footnote-back_1" href="#footnote_1" class="footnote">1</a>, dix ans avant que le projet du Château des cœurs ne commence à prendre forme. Ainsi, il s’adonne à la lecture de contes de fées, dont il témoigne dans sa lettre du 20 juin à Louise Colet :</p>
+				<blockquote>
+					<p>Je lis maintenant les contes d’enfant de Me d’Aulnoy […]. Ça m’amuse beaucoup, ces contes. Tu sais que c’est un de mes vieux rêves que d’écrire un roman de chevalerie<a id="footnote-back_2" href="#footnote_2" class="footnote">2</a>.</p>
+				</blockquote>
+				<p class="text-justify">Au mois de juillet de la même année, Flaubert rend compte cette fois de son désir d’écrire un conte de fées, sans toutefois évoquer le genre de la féerie ni même le théâtre, dans une lettre adressée de nouveau à Louise Colet :</p>
+				<blockquote>
+					<p>Le bon de la Bovary, c’est que ç’a aura été une rude gymnastique. J’aurai fait du récit écrit, ce qui est rare. Mais je prendrai ma revanche. Que je trouve un sujet dans ma voix, & j’irai loin. Qu’est-ce donc que les contes d’enfant dont tu parles ? Est-ce que tu vas écrire des contes de fées ? Voilà encore une de mes ambitions ! Écrire un conte de fées<a id="footnote-back_3" href="#footnote_3" class="footnote">3</a>.</p>
+				</blockquote>
+				<p class="text-justify">Nous retrouvons dans cette lettre le désir de Flaubert de trouver un genre littéraire qui lui permettrait de se détacher du travail gargantuesque qui est l’écriture de roman. Nous verrons notamment par la suite que c’est après avoir terminé Salammbô, roman nécessitant un grand travail de la part de l’écrivain, que Flaubert décida enfin de s’atteler à cette féerie.</p>
+				<p class="text-justify">En plus de ses lectures personnelles, c’est également son amitié avec le poète Louis Bouilhet qui nourrit son ambition d’écrire une féerie. Dès la fin des années 1840, c’est avec lui que Flaubert se tourne vers la rédaction de projets divers, dont des projets dramatiques. Il écrit ainsi à Louise Colet le 15 avril 1852 :</p>
+				<blockquote>
+					<p>Pendant deux hivers de suite, à Rouen, 1847 et 1848, tous les soirs trois fois par semaine, nous faisions à nous deux Bouilhet des scénarios […]. Nous avons ainsi une douzaine, et plus, de drames, comédies, opéras comiques, etc.<a id="footnote-back_4" href="#footnote_4" class="footnote">4</a></p>
+				</blockquote>
+				<p class="text-justify">Nous voyons que la collaboration avec Bouilhet existe depuis déjà quelques années avant le lancement du projet du Château des cœurs, puisqu’ils avaient écrit ensemble divers scénarios, prémices d’une méthode qu’ils vont utiliser pour cette pièce.</p>
+				<p class="text-justify">C’est en 1854 que se précise le projet de féerie, puisque Flaubert l’écrit dans une lettre qu’il adresse à Louis Bouilhet le 5 juillet<a id="footnote-back_5" href="#footnote_5" class="footnote">5</a>. Il y évoque leur future collaboration et leurs futurs voyages où ils « seron[t] piétés là-bas, ensemble, comme deux rhinocéros de bronze. – Nous ferons le Ballet astronomique, une féerie […]. [Ils] seron[t] beaux<a id="footnote-back_6" href="#footnote_6" class="footnote">6</a> ». Cette lettre montre encore une fois la motivation de Flaubert pour l’écriture d’une féerie, mais aussi celle de tenter d’entraîner avec lui un Bouilhet qu’il trouve « triste », en train de « faiblir ». Il cherche à lui montrer la gloire et la grandeur que pourrait signifier la publication de ce type d’œuvre. De plus, cette lettre marque un tournant par rapport à son projet initial de 1853, puisqu’à l’époque, il envisageait un genre narratif, alors qu’à présent, c’est le genre théâtral qu’il plébiscite. Enfin, cette lettre nous montre aussi que sans son amitié avec Louis Bouilhet, ce projet n’aurait sans doute pas pu voir le jour. En effet, l’implication du poète dans la genèse de l’œuvre se retrouve alors même que le projet n’avait pas encore pris forme. Cette influence va perdurer par la suite lors de l’élaboration du scénario de la pièce.</p>
+				
 			</div>
 		</div>
-		<div class="row">
+		
+		<h4 class="pt-5">Notes</h4>
+		
+		<div class="container_footnote">	
+			<p id="footnote_1">1. Léa Caminiti Pennarola, art. cité. <a href="#footnote-back_1"><i class="bi bi-arrow-return-left"></i></a></p>
+			
+			<p id="footnote_2">2. « Flaubert à Louise Colet, Croisset, 20 juin 1853 », [en ligne], <a href="https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10021&mot=&action=M">https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10021&mot=&action=M</a>. Consulté le 27 février 2022. <a href="#footnote-back_2"><i class="bi bi-arrow-return-left"></i></a></p>
+			
+			<p id="footnote_3">3. « Flaubert à Louise Colet, Croisset, 07 juillet 1853 », [en ligne], <a href="https://flaubert-v1.univ-
+rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10026&mot=&action=M">https://flaubert-v1.univ-
+rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10026&mot=&action=M</a>. Consulté le 27 février 2022. <a href="#footnote-back_3"><i class="bi bi-arrow-return-left"></i></a></p>
+
+			<p id="footnote_4">4. « Flaubert à Louise Colet, Croisset, 15 avril 1852 », [en ligne], <a href="https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=9918&mot=&action=M">https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=9918&mot=&action=M</a>. Consulté le 12 mars 2022. <a href="#footnote-back_4"><i class="bi bi-arrow-return-left"></i></a></p>
+			
+			<p id="footnote_5">5. Roxane Martin, « La tentation du féérique chez Flaubert. Carnets de notes et scenarii antérieurs au Château des cœurs », art. cité, p. 3. <a href="#footnote-back_5"><i class="bi bi-arrow-return-left"></i></a></p>
+			
+			<p id="footnote_6">6. « Flaubert à Louis Bouilhet, Croisset, 05 juillet 1854 », [en ligne], <a href="https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10100&mot=&action=M">https://flaubert-v1.univ-rouen.fr/jet/public/correspondance/trans.php?corpus=correspondance&id=10100&mot=&action=M</a>. Consulté le 27 février 2022. <a href="#footnote-back_6"><i class="bi bi-arrow-return-left"></i></a></p>
+		</div>
+
+
+		<!-- <div class="row">
 			<div class="col-3 lg-5">
 				<img class="card-img" src="media/Xms_g_340_010v.jpg" style="max-width:100%; height:auto;" alt="Ms g340 10v"/>
 				<p class="text-left caption">Légende</p>
@@ -90,20 +126,8 @@ g267</a></li>
 </h4>
 					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
 					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
-			</div>
+			</div>-->
 		</div>
-		<div class="row">
-			<div class="col-9 lg-7">
-					<h4 class="text-left"><i class="bi bi-arrow-right"></i> Titre</h4>
-					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
-					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
-			</div>
-			<div class="col-3 lg-5">
-				<img class="card-img" src="media/Xms_g_340_010v.jpg" style="max-width:100%; height:auto;" alt="Ms g340 10v"/>
-				<p class="text-right caption">Légende</p>
-			</div>
-		</div>
-	</div>
 	<!-- Footer -->
 	<div id="footer">
     	<div class="container-fluid">
