--- a/droit.html
+++ b/droit.html
@@ -43,7 +43,7 @@ id="navbarScrollingDropdown" role="button" data-toggle="dropdown"
 aria-expanded="false">Manuscrits</a>
   	 								<ul class="dropdown-menu"
 aria-labelledby="navbarScrollingDropdown">
-  	 									<li><a class="dropdown-item" href="g340.html">Ms
+  	 									<li><a class="dropdown-item" href="g340.html?id=0">Ms
 g340</a></li>
   	 									<li><a class="dropdown-item" href="#">Ms
 g267</a></li>
@@ -66,6 +66,29 @@ g267</a></li>
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<div class="col">
+			<div class="row pt-5">
+				<h2>Droit et responsabilité</h2>
+			</div>
+			<div class="row pt-5 pb-3">
+			<h4>Directrice de recherche</h4>
+			</div>
+			<div class="row">
+			<p style="text-indent: 10mm;">Marianne Bouchardon.</p>
+			</div>
+			<div class="row pt-5 pb-3">
+			<h4>Images des manuscrits</h4> 
+			</div>
+			<div class="row">
+			<p style="text-indent: 10mm;">Ms g340 et ms g267 : <a href="https://rouen.fr/adresse/bibliotheque-villon" style="text-decoration: none; color: var(--body-font-color);">Bibliothèque municipale et patrimoniale Villon</a>.</p>
+			</div>
+			<div class="row">
+			<p style="text-indent: 10mm;">NAF 15810 : <a href="https://www.bnf.fr/fr" style="text-decoration: none; color: var(--body-font-color);">Bibliothèque nationale de France</a>. La numérisation est disponible à cette adresse : <a href="https://gallica.bnf.fr/ark:/12148/btv1b6000648k/f1.item">https://gallica.bnf.fr/ark:/12148/btv1b6000648k/f1.item</a>.</p>
+			</div>
+		</div>
+	</div>
+		
 
 
 <script src="js/script.js"></script>
