--- a/g340.html
+++ b/g340.html
@@ -46,7 +46,7 @@
          </a>
          <ul aria-labelledby="navbarScrollingDropdown" class="dropdown-menu">
           <li>
-           <a class="dropdown-item" href="g340.html">
+           <a class="dropdown-item" href="g340.html?id=0">
             Ms
 g340
            </a>
