--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ crossorigin="anonymous"></script>
 		<div class="container-fluid">
 			<div class="row">
 				<nav class="col navbar navbar-expand-lg">
-  	 				<a class="navbar-brand" href="index.html">Flaubert</a>
+  	 				<a class="navbar-brand" href="index.html?id=0">Flaubert</a>
   	 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 data-target="#navbarScroll">
   	 					<i class="bi bi-list bi"></i>
@@ -43,7 +43,7 @@ id="navbarScrollingDropdown" role="button" data-toggle="dropdown"
 aria-expanded="false">Manuscrits</a>
   	 								<ul class="dropdown-menu"
 aria-labelledby="navbarScrollingDropdown">
-  	 									<li><a class="dropdown-item" href="g340.html">Ms
+  	 									<li><a class="dropdown-item" href="g340.html?id=0">Ms
 g340</a></li>
   	 									<li><a class="dropdown-item" href="#">Ms
 g267</a></li>
@@ -130,8 +130,8 @@ aria-hidden="true"></span>
 						<img class="card-img-top img-fluid"  style="height: 50vh;" src="media/portrait-flaubert.jpg"
 alt="Portrait de Gustave Flaubert"/>
 						<div class="card-body">
-							<h5 class="card-title">Gustave Flaubert</h5>
-							<p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
+							<h5 class="card-title"><a href="https://data.bnf.fr/fr/11902894/gustave_flaubert/" target="_blank" style="color: var(--title-color-3);">Gustave Flaubert</a> (1821-1880)</h5>
+							<p class="card-text text-justify">En 1853, Flaubert témoigne déjà d’un désir d’écrire un récit féerique après sa lecture de contes de fées. Ce désir continue à se développer et notamment à travers son amitié avec Louis Bouilhet, avec qui il travaille sur divers projets dramatiques. En 1862, il entreprend alors la lecture de nombreuses féeries, à partir desquelles il prend des notes dans ses carnets de travail, qui le mènera en 1863 au projet concret qui est le <cite>Château des cœurs</cite>. En suivant tout d'abord la direction de Bouilhet, Flaubert se lance en juillet de la même année à la rédaction de la pièce en son intégralité, comme le témoigne le manuscrit définitif de la pièce conservé à la BnF. Terminée en décembre, il essaye en vain de faire jouer la pièce sur la scène parisienne. Sans résultat, il se résout à faire paraître le <cite>Château</cite> en feuilletons dans <cite>La Vie moderne</cite> grâce à l’aide de Maupassant. Le dernier numéro paraît le jour de sa mort, le 8 mai 1880.</p>
 						</div>
 					</div>
 				</div>
@@ -140,8 +140,8 @@ alt="Portrait de Gustave Flaubert"/>
 						<img class="card-img-top img-fluid" style="height: 50vh;" src="media/portrait-bouilhet.jpeg"
 alt="Portrait de Louis Bouilhet"/>
 						<div class="card-body">
-							<h5 class="card-title">Louis Bouilhet</h5>
-							<p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
+							<h5 class="card-title"><a href="https://data.bnf.fr/fr/11893242/louis_bouilhet/" target="_blank" style="color: var(--title-color-3);">Louis Bouilhet</a> (1821-1869)</h5>
+							<p class="card-text text-justify">Le poète et dramaturge, grand ami de Flaubert, joue un rôle essentiel dans la réalisation du <cite>Château des cœurs</cite>. Dès 1854, presque dix ans avant la rédaction de la pièce, c'est avec lui que Flaubert envisage d’écrire des féeries. En 1863, Bouilhet mène la scénarisation du <cite>Château</cite> en en proposant les grandes idées directrices. Il contrôle les apports de Flaubert et organise le travail de ses deux collaborateurs. Alors qu'il s’occupait de réaliser une grande partie de cette scénarisation, il s’éclipse pour la phase rédactionnelle de la pièce, laissant ce rôle à Flaubert. Ainsi, de juillet à septembre 1863, son implication dans la rédaction se résume à l’écriture des vers pour certains tableaux, et à la recherche de théâtres pour la faire représenter.</p>
 						</div>
 					</div>
 				</div>
@@ -150,8 +150,8 @@ alt="Portrait de Louis Bouilhet"/>
 						<img class="card-img-top img-fluid" style="height: 50vh;"
 src="media/portrait-osmoy.jpeg" alt="Portrait de Charles d'Osmoy"/>
 					<div class="card-body">
-						<h5 class="card-title">Charles d'Osmoy</h5>
-						<p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget eros eu libero gravida interdum quis id risus. Duis nec convallis diam, quis vehicula mauris. Proin volutpat, arcu nec dictum mollis, ipsum ante venenatis lacus, ut auctor ante odio volutpat nulla. Maecenas quis leo ut ipsum dapibus dictum. Sed lobortis ullamcorper faucibus. Donec ut elementum orci. Duis ac blandit sem. Ut consectetur auctor ex id rutrum. Nullam lacinia mattis tellus ornare fermentum. Nulla quis imperdiet diam. Aliquam id tempor eros, suscipit consequat quam. Nunc et velit in magna molestie pretium.</p>
+						<h5 class="card-title"><a href="https://data.bnf.fr/fr/10728016/charles-francois-romain_leboeuf_osmoy/" target="_blank" style="color: var(--title-color-3);">Charles d'Osmoy</a> (1827-1894)</h5>
+						<p class="card-text text-justify">Homme politique français, Charles d'Osmoy commence à écrire avec Flaubert des projets dramaturgiques, et notamment féeriques, dès 1861. C’est donc suite à cela que Flaubert et Bouilhet, en juin 1863, proposent à d'Osmoy de rejoindre le projet du <cite>Château des cœurs</cite> sur lequel ils sont déjà en train de travailler. Celui-ci participe à la réalisation du plan de la pièce avec Bouilhet et à la scénarisation de plusieurs tableaux. Une fois ce travail terminé, la participation de d'Osmoy diminue largement, puisqu’il ne travaille plus que sur la rédaction de certains vers. Il continue tout de même à être impliqué dans le projet puisqu'il essaiera comme ses collaborateurs de faire représenter la pièce auprès de directeurs de théâtre.</p>
 					</div>
 				</div>
 			</div>
