--- a/src/lorem-ipsum.html
+++ b/src/lorem-ipsum.html
@@ -36,7 +36,7 @@ id="navbarScrollingDropdown" role="button" data-toggle="dropdown"
 aria-expanded="false">Manuscrits</a>
   	 								<ul class="dropdown-menu"
 aria-labelledby="navbarScrollingDropdown">
-  	 									<li><a class="dropdown-item" href="g340.html">Ms
+  	 									<li><a class="dropdown-item" href="g340.html?id=0">Ms
 g340</a></li>
   	 									<li><a class="dropdown-item" href="#">Ms
 g267</a></li>
