--- a/g340.html
+++ b/g340.html
@@ -83,6 +83,50 @@ g267
   </div>
   <div class="container-fluid">
    <div class="row">
+    <div class="col">
+     <button class="btn btn-primary" data-target=".bd-example-modal-sm" data-toggle="modal" type="button">
+      Codes de transcription
+     </button>
+     <div aria-hidden="true" aria-labelledby="mySmallModalLabel" class="modal fade bd-example-modal-sm justify-content-start pt-3" role="dialog" tabindex="-1">
+      <div class="modal-dialog modal-sm">
+       <div class="modal-content">
+        <p>
+         <ul>
+          <li>
+           La graphie des auteurs est maintenue.
+          </li>
+          <li>
+           Les ratures sont
+           <del>
+            barrés
+           </del>
+           .
+          </li>
+          <li>
+           Les ajouts en interligne sont en bleus et sont dans la continuité du texte.
+          </li>
+          <li>
+           Les passages illisibles sont indiqués par la mention [illis.].
+          </li>
+          <li>
+           Les mots dont la transcription est incertaine sont placés entre astérisques.
+          </li>
+          <li>
+           Les mots soulignés sont
+           <span style="text-decoration: underline;">
+            soulignés
+           </span>
+           .
+          </li>
+          <li>
+           Les passages supprimés soit par plusieurs lignes verticales soit par une croix de Saint-André sont placés entre lignes horizontales.
+          </li>
+         </ul>
+        </p>
+       </div>
+      </div>
+     </div>
+    </div>
     <!-- Bouton foliotage -->
     <div class="col">
      <nav aria-label="foliotage">
@@ -115,8 +159,6 @@ g267
     </div>
     <div class="col-12 col-lg-6 myText card overflow-auto" id="myText0" style="display:none; max-height:80vh">
      <h2 class="play-title">
-      <handshift resp="#CD">
-      </handshift>
       8ème tableau. Le pays de la toilette.
      </h2>
      <p class="note-left">
@@ -255,7 +297,7 @@ g267
       <br/>
       dit la jeune fille, Je ne suis pas accoutumée aux
       <br/>
-      façons d’ici
+      façons d’ici [
       <del>
        qui me paraissent bien grimacières,
        <br/>
@@ -821,11 +863,11 @@ g267
       <br/>
       – quand au papier de paille, cela est rugueux et
       <br/>
-      agaçant, cela vous
+      agaçant, cela vous *
       <del>
-       [cris]
+       cris
       </del>
-      crispe le toucher et vous
+      * crispe le toucher et vous
       <br/>
       éraille les yeux.
      </p>
@@ -995,8 +1037,6 @@ g267
     </div>
     <div class="col-12 col-lg-6 myText card overflow-auto" id="myText11" style="display:none; max-height:80vh">
      <p class="folio">
-      <handshift resp="#GF">
-      </handshift>
       129-130.
      </p>
      <h2 class="play-title">
@@ -1127,12 +1167,8 @@ g267
        Il vous a semblé
       </del>
       <ins>
-       <handshift medium="pencil">
-       </handshift>
        Oh !
       </ins>
-      <handshift medium="black-ink">
-      </handshift>
       durant trois jours.
       <del>
        moi
@@ -1295,9 +1331,9 @@ g267
       <br/>
       pas ! car enfin, qu’y a-t-il donc
       <del>
-       [de si] [illis.]
+       *de si* [illis.]
       </del>
-      dans ce [savoyard]
+      dans ce savoyard
       <br/>
       de château
       <del>
@@ -1321,7 +1357,7 @@ g267
       Dominique
      </span>
      <p class="main">
-      Oh ! oh ! reste à savoir ! allons, Monsieur, un bon [mouvement]. Revenez
+      Oh ! oh ! reste à savoir ! allons, Monsieur, un bon *mouvement*. Revenez
       <br/>
       avec moi à Paris ! oh les boulevards, les cafés, les magasins de
       <br/>
@@ -1564,7 +1600,7 @@ g267
        (il s’avance)
       </span>
       <br/>
-      ah [bien] !
+      ah *bien* !
      </p>
     </div>
     <div class="col-12 col-lg-6 myImage card overflow-auto" id="myImage16" style="display:none; max-width:100%; max-height:80vh; height:auto;">
@@ -1604,22 +1640,13 @@ g267
       (marchant resolument vers le 3e valet)
      </span>
      <p class="main">
-      <handshift medium="pencil">
-      </handshift>
       [
       <del>
-       <handshift medium="black-ink">
-       </handshift>
        Pr le coup, c’est trop fort
       </del>
-      <handshift medium="pencil">
-      </handshift>
-      ]
-      <handshift medium="black-ink">
-      </handshift>
-      ! Je
+      ] ! Je
       <del>
-       vais [pousser] au [illis.]
+       vais *pousser* au [illis.]
       </del>
       <ins>
        me moque bien
@@ -1627,9 +1654,9 @@ g267
      </p>
      <span class="speaker">
       3
-      <hi rend="superscript">
+      <sup>
        e
-      </hi>
+      </sup>
       valet
      </span>
      <p class="main">
@@ -1681,7 +1708,7 @@ g267
       <ins>
        et a fait
       </ins>
-      plusieurs gestes à la canto[n]nade, comme
+      plusieurs gestes à la cantonnade, comme
       <br/>
       p. appeler des gens. au dernier mot de Dominique
       <br/>
@@ -1789,7 +1816,7 @@ g267
       chauffer l’eau
       <ins>
        <del>
-        le [bain]
+        le bain
        </del>
       </ins>
       de Madame.
@@ -1850,11 +1877,11 @@ g267
       <ins>
        par terre
       </ins>
-      , ce tapis – quatre coussins, [
+      , ce tapis – quatre coussins, *
       <del>
        pas
       </del>
-      ] tout
+      * tout
       <br/>
       autour
       <ins>
@@ -2593,7 +2620,7 @@ g267
        Jeanne contemple le bal d’enfants
       </ins>
       <del>
-       la jeune fille [danse] ah ! les
+       la jeune fille *danse* ah ! les
       </del>
       <br/>
       « les jolies enfants, – heureuses mères ! – remerciements –
@@ -2667,7 +2694,7 @@ g267
       </ins>
       que sa
       <br/>
-      [vain] lui rappelle une autre femme. –
+      *vain* lui rappelle une autre femme. –
       <del>
        il [illis.]
       </del>
@@ -3072,7 +3099,7 @@ g267
       <del>
        c’est
        <br/>
-       encore le crepuscule [Cependant]
+       encore le crepuscule *Cependant*
       </del>
       <ins>
        et qu’il fasse encore demi jour
@@ -3347,7 +3374,7 @@ g267
     </div>
    </div>
   </div>
-  <script src="js/script_g267.js">
+  <script src="js/script.js">
   </script>
  </body>
 </html>
